--- a/assets/templates/admin_template.html
+++ b/assets/templates/admin_template.html
@@ -19,6 +19,8 @@
     </div>
     <div class="info"><span class="label">Naam:</span><span class="value">{{naam}}</span></div>
     <div class="info"><span class="label">E-mailadres:</span><span class="value">{{email}}</span></div>
+    <div class="info"><span class="label">GSM:</span><span class="value">{{gsm}}</span></div>
+    <div class="info"><span class="label">Adres:</span><span class="value">{{adres}}</span></div>
     <div class="info"><span class="label">Dienst:</span><span class="value">{{dienst}}</span></div>
     <div class="info"><span class="label">Vraag / Bericht:</span><br/><span class="value">{{onderwerp}}</span></div>
   </div>
